# QMMP

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.rus  ChangeLog.svn  README  README.RUS  README.UKR  build.sh  package_deb.sh  qmmp.pri  readme.md  run.sh
src/app/: CMakeLists.txt  app.pro  builtincommandlineoption.cpp  builtincommandlineoption.h  main.cpp  qmmp-dir.desktop  qmmp-enqueue.desktop  qmmp-opencda.desktop  qmmp.desktop  qmmp.rc  qmmpstarter.cpp  qmmpstarter.h
src/app/desktop-translations/: qmmp-dir_de.desktop.in  qmmp-dir_el.desktop.in  qmmp-dir_es.desktop.in  qmmp-dir_fi.desktop.in  qmmp-dir_fr.desktop.in  qmmp-dir_gl_ES.desktop.in  qmmp-dir_it.desktop.in  qmmp-dir_ja.desktop.in  qmmp-dir_ko.desktop.in  qmmp-dir_nl.desktop.in  qmmp-dir_pl_PL.desktop.in  qmmp-dir_pt.desktop.in  qmmp-dir_pt_BR.desktop.in  qmmp-dir_ru.desktop.in  qmmp-dir_tr.desktop.in  qmmp-dir_uk_UA.desktop.in  qmmp-dir_zh_CN.desktop.in  qmmp-dir_zh_TW.desktop.in  qmmp-enqueue_de.desktop.in  qmmp-enqueue_el.desktop.in  qmmp-enqueue_es.desktop.in  qmmp-enqueue_fi.desktop.in  qmmp-enqueue_fr.desktop.in  qmmp-enqueue_gl_ES.desktop.in  qmmp-enqueue_it.desktop.in  qmmp-enqueue_ja.desktop.in  qmmp-enqueue_ko.desktop.in  qmmp-enqueue_nl.desktop.in  qmmp-enqueue_pl_PL.desktop.in  qmmp-enqueue_pt.desktop.in  qmmp-enqueue_pt_BR.desktop.in  qmmp-enqueue_ru.desktop.in  qmmp-enqueue_tr.desktop.in  qmmp-enqueue_uk_UA.desktop.in  qmmp-enqueue_zh_CN.desktop.in  qmmp-enqueue_zh_TW.desktop.in  qmmp-opencda_de.desktop.in  qmmp-opencda_el.desktop.in  qmmp-opencda_fi.desktop.in  qmmp-opencda_fr.desktop.in  (+25 more)
src/app/metainfo/: com.ylsoftware.qmmp.metainfo.xml
src/app/translations/: qmmp_bg.ts  qmmp_cs.qm  qmmp_cs.ts  qmmp_de.qm  qmmp_de.ts  qmmp_el.qm  qmmp_el.ts  qmmp_en.ts  qmmp_es.qm  qmmp_es.ts  qmmp_fi.qm  qmmp_fi.ts  qmmp_fr.qm  qmmp_fr.ts  qmmp_gl_ES.qm  qmmp_gl_ES.ts  qmmp_he.qm  qmmp_he.ts  qmmp_hu.qm  qmmp_hu.ts  qmmp_id.qm  qmmp_id.ts  qmmp_it.qm  qmmp_it.ts  qmmp_ja.qm  qmmp_ja.ts  qmmp_kk.qm  qmmp_kk.ts  qmmp_ko.qm  qmmp_ko.ts  qmmp_lt.qm  qmmp_lt.ts  qmmp_nl.qm  qmmp_nl.ts  qmmp_pl_PL.qm  qmmp_pl_PL.ts  qmmp_pt.qm  qmmp_pt.ts  qmmp_pt_BR.qm  qmmp_pt_BR.ts  (+17 more)
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/CommandLineOptions/IncDecVolumeOption/: CMakeLists.txt  incdecvolumeoption.cpp  incdecvolumeoption.h
src/plugins/CommandLineOptions/PlayListOption/: CMakeLists.txt  playlistoption.cpp  playlistoption.h
src/plugins/CommandLineOptions/SeekOption/: CMakeLists.txt  seekoption.cpp  seekoption.h
src/plugins/CommandLineOptions/StatusOption/: CMakeLists.txt  statusoption.cpp  statusoption.h
src/plugins/Effect/: CMakeLists.txt
src/plugins/Effect/bs2b/: CMakeLists.txt  bs2b.pro  bs2bplugin.cpp  bs2bsettingsdialog.cpp  bs2bsettingsdialog.h  bs2bsettingsdialog.ui  (+2 more)
src/plugins/FileDialogs/: CMakeLists.txt
src/plugins/General/: CMakeLists.txt
src/plugins/Input/: CMakeLists.txt
src/plugins/Output/: CMakeLists.txt
src/plugins/Transports/: CMakeLists.txt  Transports.pro
src/plugins/Ui/: CMakeLists.txt
src/plugins/Visual/: CMakeLists.txt
src/qmmp/: CMakeLists.txt  abstractengine.cpp  abstractengine.h  audioconverter.cpp  audioconverter.h  audioparameters.cpp  audioparameters.h  channelconverter.cpp  channelconverter_p.h  channelmap.cpp  channelmap.h  cueparser.cpp  cueparser.h  decoder.cpp  decoder.h  decoderfactory.h  dithering.cpp  effect.cpp  effect.h  effectfactory.h  emptyinputsource.cpp  emptyinputsource_p.h  enginefactory.h  eqsettings.cpp  eqsettings.h  fileinputsource.cpp  fileinputsource_p.h  inputsource.cpp  inputsource.h  inputsourcefactory.h  metadatamanager.cpp  metadatamanager.h  metadatamodel.cpp  metadatamodel.h  output.cpp  outputfactory.h  outputwriter.cpp  outputwriter_p.h  qmmp.cpp  qmmp.h  (+32 more)
src/qmmpui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog_p.h  addurldialog.cpp  addurldialog_p.h  colorwidget.cpp  colorwidget.h  columneditor.cpp  columneditor_p.h  commandlinehandler.cpp  commandlinehandler.h  commandlinemanager.cpp  commandlinemanager.h  configdialog.cpp  configdialog.h  covereditor.cpp  covereditor_p.h  coverloader.cpp  coverloader_p.h  coverviewer.cpp  coverviewer_p.h  cueeditor.cpp  detailsdialog.cpp  detailsdialog.h  filedialog.cpp  filedialog.h  filedialogfactory.h  fileloader.cpp  fileloader_p.h  general.cpp  general.h  generalfactory.cpp  generalfactory.h  groupedcontainer.cpp  groupedcontainer_p.h  jumptotrackdialog.cpp  jumptotrackdialog_p.h  mediaplayer.cpp  mediaplayer.h  metadataformatter.cpp  (+55 more)
src/qmmpui/forms/: addurldialog.ui  configdialog.ui  jumptotrackdialog.ui  shortcutdialog.ui  templateeditor.ui
src/qmmpui/translations/: libqmmpui_bg.ts  libqmmpui_cs.qm  libqmmpui_cs.ts  libqmmpui_de.qm  libqmmpui_de.ts  libqmmpui_el.qm  libqmmpui_el.ts  libqmmpui_en.ts  libqmmpui_es.qm  libqmmpui_es.ts  libqmmpui_fi.qm  libqmmpui_fi.ts  libqmmpui_fr.qm  libqmmpui_fr.ts  libqmmpui_gl_ES.qm  libqmmpui_gl_ES.ts  libqmmpui_he.qm  libqmmpui_he.ts  libqmmpui_hu.qm  libqmmpui_hu.ts  libqmmpui_id.qm  libqmmpui_id.ts  libqmmpui_it.qm  libqmmpui_it.ts  libqmmpui_ja.qm  libqmmpui_ja.ts  libqmmpui_kk.ts  libqmmpui_ko.qm  libqmmpui_ko.ts  libqmmpui_lt.qm  libqmmpui_lt.ts  libqmmpui_nl.qm  libqmmpui_nl.ts  libqmmpui_pl_PL.qm  libqmmpui_pl_PL.ts  libqmmpui_pt.qm  libqmmpui_pt.ts  libqmmpui_pt_BR.qm  libqmmpui_pt_BR.ts  libqmmpui_ru.qm  (+16 more)
src/qmmpui/txt/: authors_de.txt  authors_el.txt  authors_es.txt  authors_fi.txt  authors_fr.txt  authors_gl_ES.txt  authors_it.txt  authors_ja.txt  authors_ko.txt  authors_nl.txt  authors_pl_PL.txt  authors_pt.txt  authors_pt_BR.txt  authors_ru.txt  authors_tr.txt  authors_uk_UA.txt  authors_zh_CN.txt  authors_zh_TW.txt  description_de.txt  description_el.txt  description_fi.txt  description_fr.txt  description_it.txt  description_ko.txt  description_nl.txt  description_pl_PL.txt  description_pt.txt  description_pt_BR.txt  description_uk_UA.txt  description_zh_CN.txt  description_zh_TW.txt  thanks_de.txt  thanks_el.txt  thanks_es.txt  thanks_fi.txt  thanks_fr.txt  thanks_gl_ES.txt  thanks_it.txt  thanks_ko.txt  thanks_nl.txt  (+24 more)
(+5010 files in other folders)
